@@ -1,8 +1,12 @@
 What "previous revision ID" means? 
-If you are updating the package that never was updated before or stamped with 
+If you are updating the package that never was stamped with 
 alembic you may need to stamp the database manually with following revision id, 
 from this point onwards you will be able to update schemas automaticly
 
+
+2012-02.19
+Made external identity fields bigger
+previous revision ID: 264049f80948
 
 2012-02-13
 Bumped alembic machinery to 0.2
